<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logout_button"
            android:contentDescription="@string/logout_image"
            android:background="@drawable/titlebar_button_bg"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:src="@drawable/logout_icon"
            android:scaleType="fitStart"
            />

        <TextView
            android:background="#0000ff"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textColor="#000000"
            android:textStyle="bold|italic"
            />
        
        <ImageView
            android:id="@+id/filter_button"
            android:contentDescription="@string/filter_image"
            android:background="@drawable/titlebar_button_bg"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:src="@drawable/filter_icon"
            android:scaleType="fitEnd"
            />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>
