<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#aaaaaa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:paddingTop="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            />
        <EditText
            android:id="@+id/ip_text"
            android:background="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:digits="0123456789."
            android:hint="@string/ip_hint"
            android:textSize="24sp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            />
        <EditText
            android:id="@+id/port_text"
            android:background="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:hint="@string/port_hint"
            android:textSize="24sp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            />
    </LinearLayout>

    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/connect"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>